force-app/main/default/objects/Gear_Order_Demographic__c/Gear_Order_Demographic__c.object-meta.xml
<CustomObject>
    <label>Gear Order Demographic</label>
    <nameField>
        <displayFormat>GOD-{0000000000}</displayFormat>
        <label>Demographic Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gear Order Demographics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>