force-app/main/default/objects/Gear_Order_Demographic__c/fields/Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_Age__c</fullName>
    <label>Child Age</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Child_Ages</valueSetName>
    </valueSet>
</CustomField>