force-app/main/default/objects/Gear_Order_Demographic__c/fields/Child_Alias__c.field-meta.xml
<CustomField>
    <fullName>Child_Alias__c</fullName>
    <defaultValue>&#39;NO ALIAS&#39;</defaultValue>
    <description>Alias or nickname of this child (could be the child&#39;s name, address, etc) so the partner can map the child demographic info to the order items for that child.</description>
    <inlineHelpText>Alias or nickname of this child (could be the child&#39;s name, address, etc) so the partner can map the child demographic info to the order items for that child.</inlineHelpText>
    <label>Child Alias / Nickname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>