force-app/main/default/objects/Gear_Order_Demographic__c/fields/Child_Gender__c.field-meta.xml
<CustomField>
    <fullName>Child_Gender__c</fullName>
    <label>Child Gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender_Demographic</valueSetName>
    </valueSet>
</CustomField>