force-app/main/default/objects/Gear_Order_Demographic__c/fields/Gear_Order__c.field-meta.xml
<CustomField>
    <fullName>Gear_Order__c</fullName>
    <label>Gear Order</label>
    <referenceTo>Gear_Order__c</referenceTo>
    <relationshipLabel>Gear Order Demographics</relationshipLabel>
    <relationshipName>Gear_Order_Demographics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>