force-app/main/default/objects/Gear_Order_Demographic__c/fields/Parent_Age__c.field-meta.xml
<CustomField>
    <fullName>Parent_Age__c</fullName>
    <label>Parent Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parent_Ages</valueSetName>
    </valueSet>
</CustomField>