force-app/main/default/objects/Gear_Order_Demographic__c/fields/Parent_Gender__c.field-meta.xml
<CustomField>
    <fullName>Parent_Gender__c</fullName>
    <label>Parent Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender_Demographic</valueSetName>
    </valueSet>
</CustomField>