force-app/main/default/objects/Gear_Order_Demographic__c/fields/Parent_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Marital_Status__c</fullName>
    <label>Parent Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marital_Status</valueSetName>
    </valueSet>
</CustomField>