force-app/main/default/objects/Gear_Order_Demographic__c/fields/Parent_Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Race_Ethnicity__c</fullName>
    <label>Parent Race/Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Race_Ethnicity</valueSetName>
    </valueSet>
</CustomField>