force-app/main/default/objects/Gear_Order_Demographic__c/fields/Siblings__c.field-meta.xml
<CustomField>
    <fullName>Siblings__c</fullName>
    <label>Siblings</label>
    <summaryForeignKey>Gear_Order_Sibling_Demographic__c.Gear_Order_Demographic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>